[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/characters/Npc.gd" type="Script" id=1]
[ext_resource path="res://resources/NPC old woman.webp" type="Texture2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.564087, 2.50995 ), Vector2( 0.564087, 4.44937 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.944064 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 198.715, 317.944 )

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource( 3 )

[node name="NPC" type="Area2D" parent="CharacterBody2D"]
scale = Vector2( 0.5078, 0.5078 )

[node name="sprite" type="Sprite2D" parent="CharacterBody2D/NPC"]
position = Vector2( 0.564087, 4.06149 )
scale = Vector2( 1, 0.955251 )
texture = ExtResource( 2 )
offset = Vector2( 3.3446, -93.3282 )
__meta__ = {
"_editor_description_": ""
}

[node name="anims" type="AnimationPlayer" parent="CharacterBody2D/NPC"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="trigger" type="CollisionShape2D" parent="CharacterBody2D/NPC"]
position = Vector2( -0.200337, -41.5847 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CharacterBody2D/NPC" to="CharacterBody2D" method="_on_NPC_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/NPC" to="CharacterBody2D" method="_on_NPC_body_exited"]
